// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stepper /> should match snapshot with label formatter 1`] = `
<div
  aria-disabled="false"
  class="base 3_mobile_base 3_mobile_base 3_mobile_base 3_mobile_base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 1_mobile_base 1_mobile_base 1_mobile_base 1_mobile_base 2_mobile_base 1_mobile_base root_base flexCenter"
  tabindex="0"
>
  <button
    aria-label="step down"
    class="base appearance cursorPointer button none_mobile_base none_mobile_base none_mobile_base none_mobile_base full_mobile_base handle_default_base flexCenter"
    tabindex="-1"
  >
    <i
      class="base display_block small_mobile_base"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998H5V11l14-.002v2z"
        />
      </svg>
    </i>
  </button>
  <span
    class="base root_base sizes_4_base align_left colours_neutral_base fontWeight_normal_base label_base"
  >
    25%
  </span>
  <button
    aria-label="step up"
    class="base appearance cursorPointer button none_mobile_base none_mobile_base none_mobile_base none_mobile_base full_mobile_base handle_default_base flexCenter"
    tabindex="-1"
  >
    <i
      class="base display_block small_mobile_base"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6v2z"
        />
      </svg>
    </i>
  </button>
</div>
`;

exports[`<Stepper /> should match snapshot with props 1`] = `
<div
  aria-disabled="false"
  class="base 3_mobile_base 3_mobile_base 3_mobile_base 3_mobile_base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 1_mobile_base 1_mobile_base 1_mobile_base 1_mobile_base 2_mobile_base 1_mobile_base root_base flexCenter"
  tabindex="0"
>
  <button
    aria-label="step down"
    class="base appearance cursorPointer button none_mobile_base none_mobile_base none_mobile_base none_mobile_base full_mobile_base handle_default_base flexCenter"
    tabindex="-1"
  >
    <i
      class="base display_block small_mobile_base"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998H5V11l14-.002v2z"
        />
      </svg>
    </i>
  </button>
  <span
    class="base root_base sizes_4_base align_left colours_neutral_base fontWeight_normal_base label_base"
  >
    19
  </span>
  <button
    aria-label="step up"
    class="base appearance cursorPointer button none_mobile_base none_mobile_base none_mobile_base none_mobile_base full_mobile_base handle_default_base flexCenter"
    tabindex="-1"
  >
    <i
      class="base display_block small_mobile_base"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6v2z"
        />
      </svg>
    </i>
  </button>
</div>
`;

exports[`<Stepper /> should match snapshot without props 1`] = `
<div
  aria-disabled="true"
  class="base 3_mobile_base 3_mobile_base 3_mobile_base 3_mobile_base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 1_mobile_base 1_mobile_base 1_mobile_base 1_mobile_base 2_mobile_base 1_mobile_base root_base flexCenter"
  tabindex="0"
>
  <button
    aria-label="step down"
    class="base appearance cursorPointer button none_mobile_base none_mobile_base none_mobile_base none_mobile_base full_mobile_base handle_default_base flexCenter"
    disabled=""
    tabindex="-1"
  >
    <i
      class="base display_block small_mobile_base"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998H5V11l14-.002v2z"
        />
      </svg>
    </i>
  </button>
  <span
    class="base root_base sizes_4_base align_left colours_neutral_base fontWeight_normal_base label_base"
  >
    0
  </span>
  <button
    aria-label="step up"
    class="base appearance cursorPointer button none_mobile_base none_mobile_base none_mobile_base none_mobile_base full_mobile_base handle_default_base flexCenter"
    disabled=""
    tabindex="-1"
  >
    <i
      class="base display_block small_mobile_base"
    >
      <svg
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6v2z"
        />
      </svg>
    </i>
  </button>
</div>
`;
